# server/api/server.gen.go
@@ -184,6 +184,9 @@ type ServerInterface interface {
 	// (POST /events/{eventID}/applicants)
 	PostEventsEventIDApplicants(ctx echo.Context, eventID EventID) error
 
+	// (GET /events/{eventID}/calendar)
+	GetEventsEventIDCalendar(ctx echo.Context, eventID EventID) error
+
 	// (PATCH /events/{eventID}/confirm)
 	PatchEventsEventIDConfirm(ctx echo.Context, eventID EventID) error
 
@@ -301,6 +304,22 @@ func (w *ServerInterfaceWrapper) PostEventsEventIDApplicants(ctx echo.Context) e
 
 	// Invoke the callback with all the unmarshaled arguments
 	err = w.Handler.PostEventsEventIDApplicants(ctx, eventID)
+	return err
+}
+
+// GetEventsEventIDCalendar converts echo context to params.
+func (w *ServerInterfaceWrapper) GetEventsEventIDCalendar(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "eventID" -------------
+	var eventID EventID
+
+	err = runtime.BindStyledParameterWithOptions("simple", "eventID", ctx.Param("eventID"), &eventID, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter eventID: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.GetEventsEventIDCalendar(ctx, eventID)
 	return err
 }
 
@@ -423,6 +442,7 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 	router.GET(baseURL+"/events/:eventID", wrapper.GetEventsEventID)
 	router.GET(baseURL+"/events/:eventID/applicants", wrapper.GetEventsEventIDApplicants)
 	router.POST(baseURL+"/events/:eventID/applicants", wrapper.PostEventsEventIDApplicants)
+	router.GET(baseURL+"/events/:eventID/calendar", wrapper.GetEventsEventIDCalendar)
 	router.PATCH(baseURL+"/events/:eventID/confirm", wrapper.PatchEventsEventIDConfirm)
 	router.GET(baseURL+"/events/:eventID/participants", wrapper.GetEventsEventIDParticipants)
 	router.GET(baseURL+"/events/:eventID/targets", wrapper.GetEventsEventIDTargets)
